# helloWorldCPP

./: CMakeLists.txt  HelloWorld.cpp  HelloWorld.h  main.cpp  makefile
include/: Add.h
src/: Add.cpp  HelloWorld.cpp  Run.cpp
